2006-12-10  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpbrushpipe.h: fix whitespace.

2006-12-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/add-bevel.scm: Removed duplicate
	variable declaration from let block.

2006-12-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/CEL.c
	* plug-ins/common/CML_explorer.c
	* plug-ins/common/antialias.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/mng.c
	* plug-ins/common/normalize.c
	* plug-ins/common/png.c
	* plug-ins/common/pnm.c
	* plug-ins/common/psd.c
	* plug-ins/common/svg.c
	* plug-ins/common/tga.c
	* plug-ins/twain/twain.c
	* plug-ins/winsnap/winsnap.c: unified copyright notices, got rid of
	"The GIMP" in a few more places.

2006-12-09  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcolorselectorpalette.[ch]
	* app/widgets/gimpcontrollerinfo.[ch]
	* app/widgets/gimpcontrollerkeyboard.[ch]
	* app/widgets/gimpcontrollerwheel.[ch]: license is GPL, not LGPL.

2006-12-09  Sven Neumann  <sven@gimp.org>

	* app/gui/gui.c: use "GIMP" instead of "The GIMP".

	* app/core/gimpimagefile.c (gimp_imagefile_save_thumb): use "GIMP"
	in the 'Software' tag when writing thumbnails.

	* app/composite/gimp-composite.html: removed outdated document.

2006-12-09  Sven Neumann  <sven@gimp.org>

	* In all files, changed the standard copyright notice to say
	"GIMP - The GNU Image Manipulation Program".

2006-12-07  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/re/re.c: Minor changes to quiet the compiler.

	* plug-ins/script-fu/tinyscheme/CHANGES: Updated to version from
	the 1.38 version of TinyScheme.

	* plug-ins/script-fu/tinyscheme/scheme.c: Added some changes from the
	1.38 version of TinyScheme. Added fix for bug #1589701 (reported on
	SourceForge.net).

	* plug-ins/script-fu/tinyscheme/scheme.h: Added a prototype to quiet
	the compiler. Added one change from the 1.38 version of TinyScheme.

2006-12-07  Michael Natterer  <mitch@gimp.org>
